[package]
name = "podseq-tests"
version = "0.1.0"
edition = "2021"
publish = false

[[test]]
name = "pipeline"
path = "pipeline.rs"

[dependencies]
podseq-core.workspace = true
podseq-sui.workspace = true
sui-crypto.workspace = true
sui-sdk-types.workspace = true
serde = { version = "1", features = ["derive"] }
bcs = "0.1"
rand = "0.8"
