[package]
name = "podseq-engine"
description = "Reth Engine API client for podseq"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
podseq-core.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
hex = "0.4"

[dev-dependencies]
tokio.workspace = true
