[package]
name = "podseq"
description = "EVM L2 sequencer posting to Walrus and settling on Sui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "podseq"
path = "src/main.rs"

[dependencies]
podseq-core.workspace = true
podseq-engine.workspace = true
podseq-sequencer.workspace = true
podseq-store.workspace = true
podseq-sui.workspace = true
podseq-p2p.workspace = true
commonware-cryptography.workspace = true
alloy-primitives.workspace = true
alloy-rpc-types-engine.workspace = true
sui-crypto.workspace = true
sui-sdk-types.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
