[package]
name = "podseq-sui"
description = "Sui-layer integration for podseq: Walrus data availability + settlement"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
podseq-core.workspace = true
walrus-core.workspace = true
futures.workspace = true
sui-sdk-types.workspace = true
sui-transaction-builder.workspace = true
sui-crypto.workspace = true
sui-rpc.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
bcs = "0.1"
base64.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
tokio.workspace = true
